--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
                             in
                             nature whether that’s going for a walk, run or cycling. I’d love you to check out my work.
                         </p>
-                        <a class="about-download" href="" download>download CV</a>
+                        <a class="about-download" href="./img/resume-frontend.pdf" download="">Download CV <i
+                            class='bx bx-download'></i></a>
+
                     </div>
                 </div>
             </section>
